add_executable(adsl_test_mds_predictor mds/test_predictor.cc)
target_link_libraries(adsl_test_mds_predictor mds global)

add_executable(adsl_test_mds_tf_predictor mds/test_tf_predictor.cc)
#target_link_libraries(adsl_test_mds_tf_predictor mds)
target_link_libraries(adsl_test_mds_tf_predictor mds global)

add_executable(test_thread test.cpp)
target_link_libraries(test_thread common)

add_executable(adsl_test_common_mutex common/test_mutex.cc)
target_link_libraries(adsl_test_common_mutex common)

add_executable(adsl_test_common_cond_wait common/test_cond_wait.cc)
target_link_libraries(adsl_test_common_cond_wait common)

add_executable(adsl_test_global_chroot global/test_chroot.cc)
target_link_libraries(adsl_test_global_chroot global adsl-util)
